# radio-calls

./: .env.default  .env.sample  .flake8  .gitignore  Dockerfile  Makefile  README.md  amazon_hit.html  amazon_hit_new.html  calls.py  docker-compose.dev.yml  docker-compose.yml  hit.py  nginx.conf  nginx.conf.j2  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
backend/: Dockerfile  entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml  shared-constants.json
backend/api/: admin.py  api.py  apps.py  constants.py  context_processors.py  middleware.py  models.py  twilio.py  utils.py
backend/api/apis/: __init__.py  hit.py  twilio.py
backend/api/apis/twilio/: mturk.py  phone.py  utils.py
backend/api/apis/twilio/phone/: __init__.py  dialed.py  sip.py
backend/api/migrations/: 0001_initial.py  0002_assignment_progress.py  0003_assignment_changes.py  0004_block_workers.py  0005_worker_page_loads.py  0006_assignment_user_agent.py  0007_good_workers.py  0008_add_phone_api.py  0009_add_call_recordings.py
backend/api/routers/: __init__.py  admin.py  common.py  hit.py
backend/api/templates/admin/: base_site.html
backend/api/templates/admin/api/hit/: change_form.html  change_list.html
backend/api/templates/admin/api/topic/: change_form.html  change_list.html
backend/api/templates/api/: external_question.xml  mturk_manage.html
backend/calls/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
backend/calls/calls/: asgi.py  settings.py  urls.py  wsgi.py
backend/twilio_rest/: apps.py
frontend/: .eslintrc.cjs  .prettierrc  entrypoint.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
frontend/src/: app.html
frontend/src/lib/: api.js  shared-constants.json  utils.js
frontend/src/routes/: +page.svelte  HIT.svelte  hit.js
frontend/src/routes/admin/: +page.svelte  Admin.svelte  admin.js
frontend/src/routes/admin/components/: Admin.svelte  Call.svelte
frontend/src/routes/hit/: +page.svelte  Call.svelte  HIT.svelte  hit.js
frontend/src/routes/hit/steps/: Call.svelte  ChooseName.svelte  EnableMic.svelte  InitializeAudio.svelte  Overview.svelte  Submit.svelte  TOS.svelte  TestSpeaking.svelte  Verify.svelte
frontend/src/routes/hit/steps/components/: AudioMeter.svelte  TOSTerm.svelte
frontend/src/routes/steps/: Call.svelte  ChooseName.svelte  Overview.svelte  Submit.svelte  TOS.svelte
frontend/src/routes/steps/components/: AudioMeter.svelte  CallSummary.svelte  ErrorModal.svelte  NextButton.svelte  Notice.svelte  TOSTerm.svelte  Warning.svelte
static/: hit.html
static/assets/: alpine-2.8.0.min.js  alpine-magic-helpers-1.0.0.min.js  alpine-magic-helpers-1.1.0.min.js
templates/: hit.html  mturk_manage.html
