[tool.black]
line-length = 120
target-version = ['py38']
exclude = '/migrations/'
experimental-string-processing = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FLASK', 'FLASKTHIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_flask = ['flask']
known_flaskthirdparty = []

[tool.poetry]
name = "radio-calls"
version = "0.1.0"
description = ""
authors = ["David Cooper"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.1"
requests = "^2.26.0"
twilio = "^7.2.0"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
