[tool.poetry]
name = "calls"
version = "0.0.1"
description = "Radio Calls server"
authors = ["David Cooper <david@dtcooper.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-environ = "^0.11.2"
django-ninja = "^1.1.0"
gunicorn = "^21.2.0"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
twilio = "^9.0.2"
wait-for-it = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
django-extensions = "^3.2.3"
flake8 = "^7.0.0"
ipdb = "^0.13.13"
ipython = "^8.22.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
preview = true
enable-unstable-feature = [
    "multiline_string_handling", "string_processing", "wrap_long_dict_values_in_parens",
    "hex_codes_in_unicode_sequences", "hug_parens_with_braces_and_square_brackets"
]

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'DJANGO', 'DJANGOTHIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_django = ['django']
known_djangothirdparty = ['environ', 'ninja']
