[tool.poetry]
name = "calls"
version = "0.0.1"
description = "Radio Calls server"
authors = ["David Cooper <david@dtcooper.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.9"
django = "^5.1.7"
django-admin-extra-buttons = "^1.6.0"
django-admin-notice = "^3.2.0"
django-constance = "^4.3.2"
django-countries = "^7.6.1"
django-durationwidget = {git = "https://github.com/tanwirahmad/django-durationwidget.git"}
django-environ = "^0.12.0"
django-jsonform = "^2.23.2"
django-ninja = "^1.3.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^8.0.0"}
faker = "^37.0.0"
geoip2 = "^5.0.1"
gunicorn = "^23.0.0"
psycopg = "^3.2.5"
python-dateutil = "^2.9.0.post0"
twilio = "^9.4.6"
wait-for-it = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
django-debug-toolbar = "^5.0.1"
django-extensions = "^3.2.3"
flake8 = "^7.1.2"
ipdb = "^0.13.13"
ipython = "^9.0.2"
isort = "^6.0.1"
werkzeug = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]
preview = true
enable-unstable-feature = [
    "multiline_string_handling", "string_processing", "wrap_long_dict_values_in_parens",
    "hex_codes_in_unicode_sequences", "hug_parens_with_braces_and_square_brackets"
]

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
force_sort_within_sections = true
combine_as_imports = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'DJANGO', 'DJANGOTHIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_django = ['django']
known_djangothirdparty = ['environ', 'ninja', 'constance', 'django_jsonform', 'durationwidget', 'admin_extra_buttons', 'django_countries', 'admin_notice', "phonenumber_field"]
skip = ['migrations']
